--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "next": "12.2.4",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
